Aggiunto costruttore più completo per user e rinominato file test dao con maiuscola iniziale